@@ -111,3 +111,11 @@ DatabaseMirror database.clamav.net
 # Enable debug messages in libclamav.
 # Default: no
 #Debug yes
+
+# Timeout in seconds when connecting to database server.
+# Default: 10
+#ConnectTimeout 30
+
+# Timeout in seconds when reading from database server.
+# Default: 30
+#ReceiveTimeout 60
