@@ -44,7 +44,9 @@ freshclam_SOURCES = \
     dns.c \
     dns.h \
     execute.c \
-    execute.h
+    execute.h \
+    nonblock.c \
+    nonblock.h
 
 DEFS = @DEFS@ -DCL_NOTHREADS
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/shared -I$(top_srcdir)/libclamav
